--- a/package.json
+++ b/package.json
@@ -6,12 +6,35 @@
   "repository": "git@github.com:l2xBrain/hachi-core.git",
   "author": "l2xBrain <l2xbrai@126.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "taskr hachi"
+  },
+  "taskr": {
+    "requires": [
+      "./taskfile-babel.js"
+    ]
+  },
   "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
     "arg": "^4.1.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "chalk": "^4.0.0",
     "dva": "^2.4.1",
+    "file-loader": "^6.0.0",
+    "node-notifier": "^7.0.1",
+    "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
     "taskr": "^1.1.0",
+    "thread-loader": "^2.1.3",
     "webpack": "^4.43.0"
   }
 }
