--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^4.0.0",
     "dva": "^2.4.1",
     "file-loader": "^6.0.0",
+    "find-up": "^4.1.0",
     "node-notifier": "^7.0.1",
     "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
