--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "file-loader": "^6.0.0",
     "find-up": "^4.1.0",
     "node-notifier": "^7.0.1",
+    "react": "^16.13.1",
     "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
     "taskr": "^1.1.0",
     "thread-loader": "^2.1.3",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-sources": "^1.4.3"
   }
 }
