--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "dva": "^2.4.1",
     "file-loader": "^6.0.0",
     "find-up": "^4.1.0",
