--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "find-up": "^4.1.0",
     "node-notifier": "^7.0.1",
     "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
     "taskr": "^1.1.0",
