--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
+    "css-loader": "^3.6.0",
     "dva": "^2.4.1",
     "file-loader": "^6.0.0",
     "find-up": "^4.1.0",
+    "less-loader": "^6.1.3",
     "node-notifier": "^7.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^4.7.6",
     "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
+    "style-loader": "^1.2.1",
     "taskr": "^1.1.0",
     "thread-loader": "^2.1.3",
     "webpack": "^4.43.0",
