--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dva": "^2.4.1",
     "file-loader": "^6.0.0",
     "find-up": "^4.1.0",
+    "glob": "^7.1.6",
+    "less": "^3.11.3",
     "less-loader": "^6.1.3",
     "node-notifier": "^7.0.1",
     "react": "^16.13.1",
