--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "glob": "^7.1.6",
     "isomorphic-style-loader": "^5.1.0",
     "less": "^3.11.3",
-    "less-loader": "^6.1.3",
+    "less-loader": "^6.2.0",
     "node-notifier": "^7.0.1",
+    "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intl": "^4.7.6",
     "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
+    "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
     "taskr": "^1.1.0",
     "thread-loader": "^2.1.3",
