complete main func

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ha",
   "version": "1.0.0",
-  "description": "hachi框架服务",
-  "main": "./dist/hachi",
-  "repository": "git@github.com:l2xBrain/hachi-core.git",
+  "description": "ha.js框架服务",
+  "main": "./dist/ha",
+  "repository": "git@github.com:l2xBrain/ha.js.git",
   "author": "l2xBrain <l2xbrai@126.com>",
   "license": "MIT",
   "bin": {
-    "ha": "./dist/hachi/index.js"
+    "ha": "./dist/ha/index.js"
   },
   "scripts": {
-    "build": "taskr hachi"
+    "build": "taskr ha"
   },
   "taskr": {
     "requires": [
