--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/core": "^7.10.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
@@ -40,12 +39,14 @@
     "glob": "^7.1.6",
     "less": "^3.11.3",
     "less-loader": "^6.2.0",
+    "memory-fs": "^0.5.0",
     "node-notifier": "^7.0.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intl": "^4.7.6",
     "react-loadable": "^5.5.0",
+    "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
