--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-loadable": "^5.5.0",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
+    "require-from-string": "^2.0.2",
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
     "taskr": "^1.1.0",
@@ -55,5 +56,8 @@
     "webpack": "^4.43.0",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.4.3"
+  },
+  "devDependencies": {
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
