--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "taskr": "^1.1.0",
     "thread-loader": "^2.1.3",
     "webpack": "^4.43.0",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.4.3"
   },
