--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.6.0",
     "dva": "^2.4.1",
+    "empty-dir": "^2.0.0",
     "file-loader": "^6.0.0",
     "find-up": "^4.1.0",
     "glob": "^7.1.6",
+    "left-pad": "^1.3.0",
     "less": "^3.11.3",
     "less-loader": "^6.2.0",
     "memory-fs": "^0.5.0",
@@ -53,6 +55,8 @@
     "style-loader": "^1.2.1",
     "taskr": "^1.1.0",
     "thread-loader": "^2.1.3",
+    "through2": "^4.0.2",
+    "vinyl-fs": "^3.0.3",
     "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-node-externals": "^1.7.2",
