--- a/package.json
+++ b/package.json
@@ -59,10 +59,8 @@
     "vinyl-fs": "^3.0.3",
     "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.4.3"
-  },
-  "devDependencies": {
-    "webpack-hot-middleware": "^2.25.0"
   }
 }
