--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xrdc",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "xrd.js框架服务",
   "main": "./dist/xrd",
   "repository": "git@github.com:l2xBrain/xrd.js.git",
@@ -60,6 +60,7 @@
     "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.0.9",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.4.3"
   }
