--- a/packages/boilerplates/demo/package.json
+++ b/packages/boilerplates/demo/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "build": "xrd build",
-    "dev": "xrd dev",
-    "start": "xrd start"
+    "build": "xrdc build",
+    "dev": "xrdc dev",
+    "start": "xrdc start"
   },
   "dependencies": {
     "@babel/core": "^7.10.4",
