--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xrdc",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "xrd.js框架服务",
   "main": "./dist/xrd",
   "repository": "git@github.com:l2xBrain/xrd.js.git",
@@ -36,7 +36,8 @@
     "taskr": "^1.1.0",
     "through2": "^4.0.2",
     "vinyl-fs": "^3.0.3",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-merge": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -49,7 +50,6 @@
     "@babel/preset-typescript": "^7.9.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^5.0.9",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.4.3",
     "babel-plugin-dynamic-import-node": "^2.3.3"
