--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xrdc",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "xrd.js框架服务",
   "main": "./dist/xrd",
   "repository": "git@github.com:l2xBrain/xrd.js.git",
@@ -37,7 +37,10 @@
     "through2": "^4.0.2",
     "vinyl-fs": "^3.0.3",
     "webpack": "^4.43.0",
-    "webpack-merge": "^5.0.9"
+    "webpack-merge": "^5.0.9",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-sources": "^1.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -48,10 +51,6 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-sources": "^1.4.3",
     "babel-plugin-dynamic-import-node": "^2.3.3"
   }
 }
