--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "dependencies": {
     "arg": "^4.1.3",
+    "babel-plugin-file-loader": "^2.0.0",
     "chalk": "^4.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "dva": "^2.4.1",
     "empty-dir": "^2.0.0",
     "find-up": "^4.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
@@ -34,9 +35,9 @@
     "through2": "^4.0.2",
     "vinyl-fs": "^3.0.3",
     "webpack": "^4.43.0",
-    "webpack-merge": "^5.0.9",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.0.9",
     "webpack-sources": "^1.4.3"
   },
   "devDependencies": {
