--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "find-up": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
     "require-from-string": "^2.0.2",
     "taskr": "^1.1.0",
     "through2": "^4.0.2",
     "vinyl-fs": "^3.0.3",
-    "webpack": "^4.43.0",
+    "webpack": "~4",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.0.9",
@@ -45,6 +44,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "node-notifier": "^7.0.1"
+    "node-notifier": "^10.0.0",
+    "react-loadable": "^5.5.0"
   }
 }
