--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lambor",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "lambor.js框架服务",
   "main": "./dist/lambor",
   "repository": "git@github.com:l2xBrain/lambor.js.git",
@@ -19,26 +19,26 @@
   },
   "dependencies": {
     "arg": "^4.1.3",
+    "babel-plugin-file-loader": "^2.0.0",
     "chalk": "^4.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "dva": "^2.4.1",
     "empty-dir": "^2.0.0",
     "find-up": "^4.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-loadable": "^5.5.0",
     "react-router-config": "^5.1.1",
     "require-from-string": "^2.0.2",
     "taskr": "^1.1.0",
     "through2": "^4.0.2",
+    "vinyl-fs": "^3.0.3",
     "webpack": "~4",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.0.9",
-    "webpack-sources": "^1.4.3",
-    "vinyl-fs": "^3.0.3",
-    "babel-plugin-file-loader": "^2.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.1"
+    "webpack-sources": "^1.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
