--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lambor",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "lambor.js框架服务",
   "main": "./dist/lambor",
   "repository": "git@github.com:l2xBrain/lambor.js.git",
@@ -18,13 +18,20 @@
     ]
   },
   "dependencies": {
+    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "arg": "^4.1.3",
-    "babel-plugin-file-loader": "^2.0.0",
     "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "dva": "^2.4.1",
     "empty-dir": "^2.0.0",
+    "file-loader": "^6.2.0",
     "find-up": "^4.1.0",
     "lambor-utils": "^1.0.0",
     "react": "^17.0.2",
@@ -33,17 +40,13 @@
     "require-from-string": "^2.0.2",
     "through2": "^4.0.2",
     "vinyl-fs": "^3.0.3",
-    "webpack": "~4",
+    "webpack": "^4.46.0",
     "webpack-dev-middleware": "^5.3.0",
     "webpack-hot-middleware": "^2.25.1",
     "webpack-merge": "^5.0.9",
     "webpack-sources": "^1.4.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
     "node-notifier": "^10.0.0",
     "taskr": "^1.1.0"
   }
