--- a/package.json
+++ b/package.json
@@ -18,25 +18,32 @@
     ]
   },
   "dependencies": {
-    "babel-loader": "^8.2.3",
     "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "arg": "^4.1.3",
+    "babel-loader": "^8.2.3",
     "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
+    "css-loader": "^5.2.7",
     "dva": "^2.4.1",
     "empty-dir": "^2.0.0",
     "file-loader": "^6.2.0",
     "find-up": "^4.1.0",
     "lambor-utils": "^1.0.0",
+    "less": "^4.1.2",
+    "less-loader": "~7",
+    "mini-css-extract-plugin": "^1.6.2",
+    "postcss": "^8.4.5",
+    "postcss-loader": "~4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.2.1",
     "require-from-string": "^2.0.2",
     "through2": "^4.0.2",
     "vinyl-fs": "^3.0.3",
